--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "config": "^3.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
+    "helmet": "^3.21.1",
     "jest": "^24.9.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -22,7 +24,11 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "jest --watchAll --verbose --coverage"
+    "test": "jest --watchAll --verbose --coverage",
+    "start": "node index.js"
+  },
+  "engines":{
+    "node":"10.15.1"
   },
   "repository": {
     "type": "git",
